--- a/payflow/pubspec.yaml
+++ b/payflow/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -39,6 +38,10 @@ dependencies:
   google_sign_in: ^5.2.1
   google_sign_in_web: ^0.10.0+3
   shared_preferences: ^2.0.8
+  google_ml_kit: ^0.6.0
+  camera: ^0.8.1+3
+  image_picker: ^0.8.1
+  image_picker_for_web: ^2.0.0
 
 
 dev_dependencies:
